objects/test_renamed__c.object
<CustomObject>
    <description>test edit description</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>test</relationshipLabel>
        <relationshipName>test</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Multi_picklist__c</fullName>
        <label>Multi-picklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Val 1</fullName>
                </value>
                <value>
                    <fullName>Val 2</fullName>
                </value>
                <value>
                    <fullName>Val 3</fullName>
                </value>
                <value>
                    <fullName>Val 4</fullName>
                </value>
                <value>
                    <fullName>Val 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SVal 1</fullName>
                </value>
                <value>
                    <fullName>SVal 2</fullName>
                </value>
                <value>
                    <fullName>SVal 3</fullName>
                    <color>#33FF33</color>
                    <label>SVal 3</label>
                </value>
                <value>
                    <fullName>SVal 4</fullName>
                </value>
                <value>
                    <fullName>SVal 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_area_long__c</fullName>
        <label>Text area long</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text_area_rich__c</fullName>
        <label>Text area rich</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Text_encrypted__c</fullName>
        <label>Text encrypted</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>auto_number__c</fullName>
        <label>auto-number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>formula__c</fullName>
        <formula>&apos;test&apos;</formula>
        <label>formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simple_url__c</fullName>
        <label>simple url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>test_external__c</fullName>
        <label>test external</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testaddpika_del__c</fullName>
        <label>testaddpika</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>pika1</fullName>
                </value>
                <value>
                    <fullName>pika2</fullName>
                </value>
                <value>
                    <fullName>pikatchou</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>text__c</fullName>
        <description>test3</description>
        <label>text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>text_area__c</fullName>
        <label>text area</label>
        <type>TextArea</type>
    </fields>
    <label>test</label>
    <nameField>
        <label>test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>test</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>